--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                     
                     firebase.auth().signInWithEmailAndPassword(error.credential)
                     .then(user => {
-                        
-                        user.linkWithCredential(error.credential)
+                        console.log('Facebook>>', user);
+                        // user.linkWithCredential(error.credential)
                     })
                     .catch(error => console.log(error))});
 
