--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 firebase.auth().fetchSignInMethodsForEmail(error.email)
                 .then(providers => {
                     console.log("account ne: ", error.credential);
-                    firebase.auth().signInWithEmailAndPassword(error.credential)
+                    firebase.auth().signInWithCredential(error.credential)
                     .then(user => {
                         console.log('Facebook>>', user);
                         // user.linkWithCredential(error.credential)
