--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         console.log('Facebook>>', user);
                         // user.linkWithCredential(error.credential)
                     })
-                    .catch(error => console.log(error))});
+                    .catch(error => console.log("error facebook:", error))});
 
                                 ////////////// console.error('Error: hande error here>Facebook>>', error.code)
                 // });
