--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 var user = result.user; //Thông tin của user
                 console.log(user)
             }).catch(function (error) {
+                console.log("error: ", error);
                 var errorCode = error.code;
                 var errorMessage = error.message;
                 var email = error.email;
