--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 
                 /////
             
-            }).catch(function(error) {
+            }).catch(async function(error) {
                 // Handle Errors here.
                 var errorCode = error.code;
                 var errorMessage = error.message;
