--- a/index.html
+++ b/index.html
@@ -1,67 +1,53 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Facebook Login JavaScript Example</title>
-<meta charset="UTF-8">
-</head>
-<body>
+<button hidden id="sign-out" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">
+    Sign-out
+</button>
+<button hidden id="sign-in" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">
+    <i class="material-icons">account_circle</i>Sign-in with Facebook
+</button>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.20.0/firebase.js"></script>
 <script>
+(function() {
+    console.log('Start file login with firebase');
+    // Initialize Firebase
+    var config = {
+        apiKey: "AIzaSyAip4hecOJfi2iYN-iMBzWaCi9965XgBXg",
+        authDomain: "stech-login.firebaseapp.com",
+        databaseURL: "https://stech-login-default-rtdb.asia-southeast1.firebasedatabase.app/",
+        projectId: "stech-login",
+        storageBucket: "stech-login.appspot.com",
+        messagingSenderId: "47306739642",
+        appId: "1:47306739642:web:81dbe404d0f3a3e5add783",
+        measurementId: "G-DKPY2G15WY"
+    };
+    firebase.initializeApp(config);
+    var database = firebase.database();
 
-  function statusChangeCallback(response) {  // Called with the results from FB.getLoginStatus().
-    console.log('statusChangeCallback');
-    console.log(response);                   // The current login status of the person.
-    if (response.status === 'connected') {   // Logged into your webpage and Facebook.
-      testAPI();  
-    } else {                                 // Not logged into your webpage or we are unable to tell.
-      document.getElementById('status').innerHTML = 'Please log ' +
-        'into this webpage.';
+    firebase.auth().onAuthStateChanged(function(user) {
+    if (user) {
+            $('#sign-out')[0].hidden = false;
+    } else {
+        $('#sign-in')[0].hidden=false;
+
+        $('#sign-in').on('click', () => {
+            var provider = new firebase.auth.FacebookAuthProvider();
+            provider.setCustomParameters({
+                'display': 'popup' //Login dưới dạng popup
+            });
+            firebase.auth().signInWithPopup(provider).then(function (result) {
+                var token = result.credential.accessToken; //Token facebook của user
+                var user = result.user; //Thông tin của user
+                console.log("token: ", token);
+                console.log(user)
+            }).catch(function (error) {
+                console.log(error);
+                var errorCode = error.code;
+                var errorMessage = error.message;
+                var email = error.email;
+                var credential = error.credential;
+            });
+        })
     }
-  }
-
-
-  function checkLoginState() {               // Called when a person is finished with the Login Button.
-    FB.getLoginStatus(function(response) {   // See the onlogin handler
-      statusChangeCallback(response);
-    });
-  }
-
-
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : 1089936745087421,
-      cookie     : true,                     // Enable cookies to allow the server to access the session.
-      xfbml      : true,                     // Parse social plugins on this webpage.
-      version    : 'v12.0'           // Use this Graph API version for this call.
-    });
-
-
-    FB.getLoginStatus(function(response) {   // Called after the JS SDK has been initialized.
-      statusChangeCallback(response);        // Returns the login status.
-    });
-  };
- 
-  function testAPI() {                      // Testing Graph API after login.  See statusChangeCallback() for when this call is made.
-    console.log('Welcome!  Fetching your information.... ');
-    FB.api('/me', function(response) {
-      console.log("data: ", response);
-      console.log('Successful login for: ' + response.name);
-      document.getElementById('status').innerHTML =
-        'Thanks for logging in, ' + response.name + '!';
-    });
-  }
-
+});
+}());
 </script>
-
-
-<!-- The JS SDK Login Button -->
-
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-</fb:login-button>
-
-<div id="status">
-</div>
-
-<!-- Load the JS SDK asynchronously -->
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
-</body>
-</html>
